# orhi

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  gen_examples.bat  gen_examples_vulkan_dev.bat  gen_proj_linux.sh  gen_proj_macos.sh  gen_proj_win32.bat  premake5.lua
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: CMakeLists.txt  README.md  gen_examples.bat  gen_examples.sh  gen_examples_dx12.bat  premake5.lua
examples/0-vulkan/: Main.cpp  premake5.lua
examples/1-triangle/: CMakeLists.txt  Main.cpp  premake5.lua
examples/2-cube/: CMakeLists.txt  Main.cpp  main.frag  main.vert  premake5.lua
examples/3-framebuffer/: Main.cpp  premake5.lua
examples/3-texture/: CMakeLists.txt  Main.cpp  main.frag  premake5.lua
examples/4-depth/: CMakeLists.txt  Main.cpp  main.frag  main.vert  premake5.lua
examples/4-geometry/: Main.cpp  premake5.lua
examples/5-compute/: Main.cpp  premake5.lua
examples/5-mipmaps/: CMakeLists.txt  Main.cpp  main.vert  premake5.lua
examples/6-msaa/: CMakeLists.txt  Main.cpp  main.vert  premake5.lua
examples/6-tessellation/: Main.cpp  premake5.lua
examples/7-particles/: CMakeLists.txt  Main.cpp  main.comp  main.frag  main.vert  premake5.lua
examples/8-push-constants/: CMakeLists.txt  Main.cpp  main.vert  premake5.lua
include/orhi/: Backend.h  BackendTraits.h  Buffer.h  CommandBuffer.h  CommandPool.h  Descriptor.h  DescriptorPool.h  DescriptorSet.h  DescriptorSetLayout.h  Device.h  DeviceManager.h  Fence.h  Framebuffer.h  GraphicsPipeline.h  IndexBuffer.h  Instance.h  PhysicalDevice.h  Pipeline.h  PipelineLayout.h  Queue.h  RenderPass.h  Renderbuffer.h  Semaphore.h  ShaderModule.h  ShaderProgram.h  ShaderStage.h  ShaderStorageBuffer.h  Surface.h  SwapChain.h  Texture.h  TextureHandle.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h
include/orhi/api/: TBackend.h  TBackendTraits.h  TBuffer.h  TCommandBuffer.h  TCommandPool.h  TContextRegistry.h  TDescriptor.h  TDescriptorPool.h  TDescriptorSet.h  TDescriptorSetLayout.h  TDevice.h  TFence.h  TFramebuffer.h  TGraphicsPipeline.h  TIndexBuffer.h  TInstance.h  TPhysicalDevice.h  TPipeline.h  TPipelineLayout.h  TQueue.h  TRenderPass.h  TRenderbuffer.h  TSemaphore.h  TShaderModule.h  TShaderProgram.h  TShaderStage.h  TShaderStorageBuffer.h  TSwapChain.h  TTexture.h  TTextureHandle.h  TUniformBuffer.h  TVertexArray.h  TVertexBuffer.h
include/orhi/apii/: TBackend.h  TBuffer.h  TCommandBuffer.h  TCommandPool.h  TDescriptorPool.h  TDescriptorSet.h  TDescriptorSetLayout.h  TDevice.h  TDeviceManager.h  TFence.h  TFramebuffer.h  TGraphicsPipeline.h  TPhysicalDevice.h  TQueue.h  TRenderPass.h  TSemaphore.h  TShaderModule.h  TShaderProgram.h  TSurface.h  TSwapChain.h
include/orhi/data/: AttachmentDesc.h  BackendDesc.h  BufferCopyDesc.h  BufferDesc.h  BufferMemoryRange.h  BufferTextureCopyDesc.h  BufferViewDesc.h  ClearValue.h  ColorBlendStateDesc.h  ComputePipelineDesc.h  DepthStencilStateDesc.h  DescriptorBinding.h  DescriptorPoolDesc.h  DescriptorPoolSize.h  DescriptorWriteDesc.h  DeviceInfo.h  DynamicStateDesc.h  Extent3D.h  FramebufferDesc.h  GraphicsPipelineDesc.h  InputAssemblyStateDesc.h  InstanceDesc.h  MemoryRange.h  MultisampleStateDesc.h  NativeHandle.h  Offset3D.h  PipelineLayoutDesc.h  PipelineState.h  PushConstantRange.h  QueuesDesc.h  RasterizationStateDesc.h  Rect2D.h  RenderingInfo.h  SamplerDesc.h  ShaderCompilationResult.h  ShaderLinkingResult.h  SwapChainDesc.h  TessellationStateDesc.h  TextureDesc.h  TextureRegion.h  (+8 more)
include/orhi/data/archives/: TextureDesc.h  UniformInfo.h  VertexAttribute.h
include/orhi/detail/: BackendObject.h  Object.h
include/orhi/except/: OutOfDateSwapChain.h
include/orhi/impl/: BackendSelection.h
include/orhi/impl/common/: BackendObject.h  NativeHandle.h
include/orhi/impl/dx12/: BackendTraits.h  Buffer.h  ComPtr.h  CommandBuffer.h  CommandPool.h  Descriptor.h  DescriptorPool.h  DescriptorSet.h  DescriptorSetLayout.h  Device.h  Fence.h  Framebuffer.h  Instance.h  Pipeline.h  PipelineLayout.h  Queue.h  RenderPass.h  Semaphore.h  ShaderModule.h  SwapChain.h  Texture.h
include/orhi/impl/gl/: Backend.h  Buffer.h  Framebuffer.h  IndexBuffer.h  Renderbuffer.h  ShaderProgram.h  ShaderStage.h  ShaderStorageBuffer.h  Texture.h  TextureHandle.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h
include/orhi/impl/mock/: Backend.h  Buffer.h  Framebuffer.h  IndexBuffer.h  Renderbuffer.h  ShaderProgram.h  ShaderStage.h  ShaderStorageBuffer.h  Texture.h  TextureHandle.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h
include/orhi/impl/vk/: Backend.h  BackendTraits.h  Buffer.h  CommandBuffer.h  CommandPool.h  ComputePipeline.h  ContextRegistry.h  Descriptor.h  DescriptorPool.h  DescriptorSet.h  DescriptorSetLayout.h  Device.h  DeviceManager.h  Fence.h  Framebuffer.h  GraphicsPipeline.h  IndexBuffer.h  Instance.h  PhysicalDevice.h  Pipeline.h  PipelineLayout.h  Queue.h  RenderPass.h  Renderbuffer.h  Semaphore.h  ShaderModule.h  ShaderStage.h  (+10 more)
include/orhi/math/: Conversions.h  Extent2D.h  Extent3D.h  Mat3.h  Mat4.h  Offset2D.h  Offset3D.h  Rect2D.h  Rect3D.h  Vec2.h  Vec3.h  Vec4.h
include/orhi/types/: EAccessSpecifier.h  EAttachmentType.h  EBlendFactor.h  EBlendOp.h  EBlendingEquation.h  EBlendingFactor.h  EBufferUsageFlags.h  EBufferViewType.h  EColorComponentFlags.h  EColorSpace.h  ECommandBufferLevel.h  ECommandBufferUsageFlags.h  EComparaisonAlgorithm.h  ECompareOp.h  ECullFace.h  ECullModeFlags.h  ECullingOptions.h  EDataType.h  EDescriptorPoolCreateFlags.h  EDescriptorType.h  EDynamicState.h  EFilter.h  EFormat.h  EFramebufferAttachment.h  EFrontFace.h  EGraphicsBackend.h  EIndexType.h  EInternalFormat.h  ELogicOp.h  EMemoryBarrierFlags.h  EMemoryPropertyFlags.h  EOperation.h  EPipelineBindPoint.h  EPipelineStageFlags.h  EPixelDataFormat.h  EPixelDataType.h  EPolygonMode.h  EPresentMode.h  EPrimitiveMode.h  EPrimitiveTopology.h  (+16 more)
include/orhi/utils/: BitmaskOperators.h  ContextRegistry.h
src/orhi/debug/: Assert.cpp  Assert.h  Log.cpp  Log.h
src/orhi/utils/: EnumMapper.h
(+124 files in other folders)
